--- a/SIkS_cpp/CMakeLists.txt
+++ b/SIkS_cpp/CMakeLists.txt
@@ -3,8 +3,20 @@ project(SMAWS)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(Library_Files
-        lib/ScenarioSimulator.cpp
-        lib/ScenarioSimulator.h)
+add_subdirectory(lib/submodules/eigen)
+add_subdirectory(lib/submodules/json)
 
-add_executable(${PROJECT_NAME} ${Library_Files} main.cpp)
+include_directories(${PROJECT_SOURCE_DIR}/lib/submodules/eigen
+                    ${PROJECT_SOURCE_DIR}/lib/submodules/json/include)
+
+set(Library_Files
+        lib/Server.cpp
+        lib/Server.h
+        lib/ScenarioSimulator.cpp
+        lib/ScenarioSimulator.h
+        lib/DatasetAPI.cpp
+        lib/DatasetAPI.h
+        lib/Dataset.h)
+
+add_executable(${PROJECT_NAME} ${Library_Files} ipc.cpp) #main.cpp)
+target_link_libraries(${PROJECT_NAME} PUBLIC eigen nlohmann_json::nlohmann_json)
